# restaurant-data-pipeline

./: .gitignore  README.md  pyproject.toml
src/: __main__.py
src/restaurant_data_pipeline/: __init__.py  tabelog.py
