[project]
name = "restaurant-data-pipeline"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "rmc8", email = "k@rmc-8.com" }
]
dependencies = [
    "lxml>=5.3.1",
    "bs4>=0.0.2",
    "httpx>=0.28.1",
    "fire>=0.7.0",
    "polars>=1.22.0",
    "tqdm>=4.67.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/restaurant_data_pipeline"]

[tool.rye.scripts]
start = "python src"
